2016-12-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.2 

2016-12-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (isAtLeastGivenLengthAndAllDigits): Simplified
	using Boost classification and predicate use

2016-12-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (format): Condition only on Rcpp version

	* tests/utilities.R: Call anytime:::format()

2016-12-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll format and date

	* src/anytime.cpp (stringSplitter): Correct small oversight and split
	on actual 'spliton' argument

	* tests/gh_issue_33.R: Added to test most of GH issue
	* tests/allFormats.R: Minor edit

2016-12-03  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (stringSplitter): Split string with
	boost::algorithm instead of strtok which appears to fail on 64-bit
	windows.

2016-11-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.1

2016-11-26  Dirk Eddelbuettel  <edd@debian.org>

	* tests/utilities.R: Gaming coverage metrics by adding more calls
	* tests/allFormats.R: Ditto

	* src/anytime.cpp (anytime_cpp): Condition use of Rcpp::stop() on
	having Rcpp 0.12.8.1 or later as 0.12.7 and 0.12.8 had a bug tickled
	under older g++ versions such as Ubuntu 14.04 one used by Travis CI

2016-11-25  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (after_success): Launch coverage analysis
	* .codecov.yml (comment): Added
	* .Rbuildignore: Exclude .codecov.yml
	* README.md: Added code coverage badge

2016-11-19  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R (anydate,utcdate): Check for input of class Date

	* src/anytime.cpp (stringSplitter): Be more defensive about input string

2016-11-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.0

	* tests/validate.R: No call of stopifnot(); Windows always surprises

2016-11-06  Dirk Eddelbuettel  <edd@debian.org>
