@@ -1,6 +1,12 @@
+2016-12-14  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/anytime.cpp (sformats[]): Add ISO8601 format
+
+	* tests/allFormats.R: Tests for ISO8601 format
+
 2016-12-13  Dirk Eddelbuettel  <edd@debian.org>
 
-	* DESCRIPTION (Version, Date): Release 0.1.2 
+	* DESCRIPTION (Version, Date): Release 0.1.2
 
 2016-12-06  Dirk Eddelbuettel  <edd@debian.org>
 
@@ -15,7 +21,7 @@
 
 2016-12-04  Dirk Eddelbuettel  <edd@debian.org>
 
-	* DESCRIPTION (Version, Date): Roll format and date
+	* DESCRIPTION (Version, Date): Roll version and date
 
 	* src/anytime.cpp (stringSplitter): Correct small oversight and split
 	on actual 'spliton' argument
